--- a/sigi/composer.json
+++ b/sigi/composer.json
@@ -21,7 +21,8 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "twbs/bootstrap": "^3.3"
+        "twbs/bootstrap": "^3.3",
+        "besimple/sso-auth-bundle": "@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
