creacion de controller misc para cosas generales, y avance de trabajo con oportunidades, falta probar, push del dia

--- a/sigi/app/config/routing.yml
+++ b/sigi/app/config/routing.yml
@@ -44,3 +44,7 @@ logout:
 backend_security:
     resource: "@BackendBundle/Controller/SecurityController.php"
     type:     annotation
+
+backend_misc:
+    resource: "@BackendBundle/Controller/MiscController.php"
+    type:   annotation
