avance con la vista para agregar oportunidades de investigacion, push del dia

--- a/sigi/app/config/security.yml
+++ b/sigi/app/config/security.yml
@@ -56,7 +56,7 @@ security:
         - { path: ^/research/new$, roles: ROLE_ADMIN }
         - { path: ^/research/[0-9]+/edit$, roles: ROLE_ADMIN }
 
-        - { path: ^/user/$, roles: ROLE_ADMIN }
+        #- { path: ^/user/$, roles: ROLE_ADMIN }
         - { path: ^/user/[0-9]+$, roles: [ROLE_STUDENT, ROLE_MENTOR,ROLE_OTHER] }
         - { path: ^/user/new$, roles: ROLE_ADMIN }
         - { path: ^/user/[0-9]+/edit$, roles: [ROLE_STUDENT, ROLE_MENTOR,ROLE_OTHER] }
