--- a/sigi/src/BackendBundle/Resources/config/services.yml
+++ b/sigi/src/BackendBundle/Resources/config/services.yml
@@ -2,3 +2,6 @@ services:
 #    backend.example:
 #        class: BackendBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
+  backend.form.type.oportunityResearch:
+    class: BackendBundle\Form\Type\OportunityResearchType
+    arguments: [ "@doctrine.orm.entity_manager" ]
