agregue prerequisitos a la base de datos, modifique las vistas y esta funcinonando como tags en oportunidades de investigacion

--- a/sigi/app/config/routing.yml
+++ b/sigi/app/config/routing.yml
@@ -1,3 +1,7 @@
+backend_prerequisite:
+    resource: "@BackendBundle/Controller/PrerequisiteController.php"
+    type:     annotation
+
 backend_user:
     resource: "@BackendBundle/Controller/UserController.php"
     type:     annotation
