bug en oportunidad, modelos de departamento y facultad terminados, falta agregarlos a la vista de profesor y oportunidad

--- a/sigi/app/config/routing.yml
+++ b/sigi/app/config/routing.yml
@@ -52,3 +52,7 @@ backend_security:
 backend_misc:
     resource: "@BackendBundle/Controller/MiscController.php"
     type:   annotation
+
+backend_faculty:
+    resource: "@BackendBundle/Controller/FacultyController.php"
+    type:   annotation
