arreglamos el bug del cambio de contraseña, push del dia, trabajando en researchrepository linea58

--- a/sigi/app/config/routing.yml
+++ b/sigi/app/config/routing.yml
@@ -1,3 +1,7 @@
+backend_deadline:
+    resource: "@BackendBundle/Controller/DeadlineController.php"
+    type:     annotation
+
 backend_prerequisite:
     resource: "@BackendBundle/Controller/PrerequisiteController.php"
     type:     annotation
