--- a/sigi/app/config/security.yml
+++ b/sigi/app/config/security.yml
@@ -70,6 +70,11 @@ security:
         #- { path: ^/classcode/[0-9]+$, roles: ROLE_ADMIN }
         #- { path: ^/classcode/new$, roles: ROLE_ADMIN }
         #- { path: ^/classcode/[0-9]+/edit$, roles: ROLE_ADMIN }
+
+        #- { path: ^/deadline/$, roles: ROLE_ADMIN }
+        #- { path: ^/deadline/[0-9]+$, roles: ROLE_ADMIN }
+        #- { path: ^/deadline/new$, roles: ROLE_ADMIN }
+        #- { path: ^/deadline/[0-9]+/edit$, roles: ROLE_ADMIN }
     providers:
         our_db_provider:
             entity:
