push del dia, arreglando un error en la linea 45 de researchRepository, creation date no existe??

--- a/sigi/app/config/routing.yml
+++ b/sigi/app/config/routing.yml
@@ -60,3 +60,7 @@ backend_misc:
 backend_faculty:
     resource: "@BackendBundle/Controller/FacultyController.php"
     type:   annotation
+
+backend_class_code:
+    resource: "@BackendBundle/Controller/ClassCodeController.php"
+    type:   annotation
