--- a/sigi/app/config/security.yml
+++ b/sigi/app/config/security.yml
@@ -62,9 +62,9 @@ security:
         - { path: ^/research/[0-9]+/edit$, roles: ROLE_ADMIN }
 
         #- { path: ^/user/$, roles: ROLE_ADMIN }
-        - { path: ^/user/[0-9]+$, roles: [ROLE_STUDENT, ROLE_MENTOR,ROLE_OTHER] }
-        - { path: ^/user/new$, roles: ROLE_ADMIN }
-        - { path: ^/user/[0-9]+/edit$, roles: [ROLE_STUDENT, ROLE_MENTOR,ROLE_OTHER] }
+        #- { path: ^/user/[0-9]+$, roles: [ROLE_STUDENT, ROLE_MENTOR,ROLE_OTHER] }
+        #- { path: ^/user/new$, roles: ROLE_ADMIN }
+        #- { path: ^/user/[0-9]+/edit$, roles: [ROLE_STUDENT, ROLE_MENTOR,ROLE_OTHER] }
 
         #- { path: ^/classcode/$, roles: ROLE_ADMIN }
         #- { path: ^/classcode/[0-9]+$, roles: ROLE_ADMIN }
