--- a/sigi/app/config/routing.yml
+++ b/sigi/app/config/routing.yml
@@ -64,3 +64,7 @@ backend_faculty:
 backend_class_code:
     resource: "@BackendBundle/Controller/ClassCodeController.php"
     type:   annotation
+
+backend_reporter:
+    resource: "@BackendBundle/Controller/ReporterController.php"
+    type:   annotation
