--- a/sigi/app/config/config.yml
+++ b/sigi/app/config/config.yml
@@ -66,5 +66,5 @@ swiftmailer:
     host:      "%mailer_host%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
-    port:      "%mailer_port%"
+    port:      25
     spool:     { type: memory }
