--- a/sigi/composer.json
+++ b/sigi/composer.json
@@ -22,7 +22,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "twbs/bootstrap": "^3.3",
-        "besimple/sso-auth-bundle": "@dev"
+        "besimple/sso-auth-bundle": "@dev",
+        "liuggio/excelbundle": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
