--- a/sigi/composer.json
+++ b/sigi/composer.json
@@ -23,7 +23,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "twbs/bootstrap": "^3.3",
         "besimple/sso-auth-bundle": "@dev",
-        "liuggio/excelbundle": "^2.0"
+        "liuggio/excelbundle": "^2.0",
+        "jmose/command-scheduler-bundle": "^1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
