--- a/sigi/app/config/config.yml
+++ b/sigi/app/config/config.yml
@@ -12,6 +12,7 @@ parameters:
 framework:
     #esi:             ~
     #translator:      { fallbacks: ["%locale%"] }
+    translator: ~
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -68,3 +69,17 @@ swiftmailer:
     password:  "%mailer_password%"
     port:      25
     spool:     { type: memory }
+# CommandScheduler Configuration
+jmose_command_scheduler:
+    log_path: "%kernel.root_dir%/../web/SchedulerLog"
+
+
+
+
+
+
+
+
+
+
+
