se agrego el email de dara a la base de datos, no es extensible por el momento

--- a/sigi/app/config/routing.yml
+++ b/sigi/app/config/routing.yml
@@ -1,3 +1,7 @@
+backend_email_list:
+    resource: "@BackendBundle/Controller/EmailListController.php"
+    type:     annotation
+
 backend_deadline:
     resource: "@BackendBundle/Controller/DeadlineController.php"
     type:     annotation
