--- a/sigi/app/config/config.yml
+++ b/sigi/app/config/config.yml
@@ -67,7 +67,8 @@ swiftmailer:
     host:      "%mailer_host%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
-    port:      25
+    port:      587
+    encryption: "tls"
     spool:     { type: memory }
 # CommandScheduler Configuration
 jmose_command_scheduler:
