--- a/sigi/app/config/config.yml
+++ b/sigi/app/config/config.yml
@@ -8,6 +8,7 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: es
+    web_dir: 'http://localhost:8000'
 
 framework:
     #esi:             ~
