--- a/sigi/app/config/security.yml
+++ b/sigi/app/config/security.yml
@@ -61,6 +61,8 @@ security:
         - { path: ^/research/new$, roles: ROLE_ADMIN }
         - { path: ^/research/[0-9]+/edit$, roles: ROLE_ADMIN }
 
+        - { path: ^/misc/router, roles: [ROLE_MENTOR, ROLE_STUDENT, ROLE_OTHER] }
+
         #- { path: ^/user/$, roles: ROLE_ADMIN }
         #- { path: ^/user/[0-9]+$, roles: [ROLE_STUDENT, ROLE_MENTOR,ROLE_OTHER] }
         #- { path: ^/user/new$, roles: ROLE_ADMIN }
